@@ -1,3 +1,9 @@
+2006-05-20  Michael Wybrow  <mjwybrow@users.sourceforge.net>
+
+	* src/libnrtype/FontInstance.cpp: patch from David Turner of the
+	  FreeType Project.  Fixes a compilation problem and a possible
+	  segmentation fault.
+
 2006-05-18  Jon A. Cruz  <jon@joncruz.org>
 	* src/layer-manager.cpp, src/dialogs/layers-panel.h,
 	  src/dialogs/layers-panel.cpp:
